update index file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>New repository</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto velit eligendi laborum nostrum culpa fugit molestias officiis? Cupiditate natus necessitatibus tempore architecto accusantium iure ut illum similique quidem modi?</p>
 </body>
 </html>
