add a list to index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
   <h1>New repository</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto velit eligendi laborum nostrum culpa fugit molestias officiis? Cupiditate natus necessitatibus tempore architecto accusantium iure ut illum similique quidem modi?</p>
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>Contact</li>
+  </ul>
 </body>
 </html>
